# gitlab-api

./: .gitlab-ci.yml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/gitlab_client/: __init__.py  _base.py  _files.py  _issues.py  _merge_requests.py  _pipelines.py  _releases.py  _variables.py  client.py
src/qodev_gitlab_api/: __init__.py  _base.py  _files.py  _issues.py  _merge_requests.py  _pipelines.py  _releases.py  _variables.py  client.py  exceptions.py  models.py
tests/: conftest.py  test_client.py
