[project]
name = "qodev-gitlab-api"
version = "0.1.0"
description = "Python client for the GitLab API"
readme = "README.md"
authors = [
    { name = "Jan Scheffler", email = "jan.scheffler@qodev.ai" }
]
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["gitlab", "api", "client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28.1",
    "python-dotenv>=1.1.0",
]

[project.urls]
Repository = "https://github.com/qodevai/gitlab-api"
Issues = "https://github.com/qodevai/gitlab-api/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qodev_gitlab_api"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["qodev_gitlab_api"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.typos.default]
extend-ignore-re = ["[0-9a-zA-Z]{40,}"]
extend-words = { noteable = "noteable" }

[tool.typos.files]
extend-exclude = ["uv.lock", "*.log"]
